--- a/.github/workflows/job-dependencies.yml
+++ b/.github/workflows/job-dependencies.yml
@@ -11,30 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "This job will be run first."
-  fanout1:
-    runs-on: ubuntu-latest
-    needs: initial
-    steps:
-      - run: echo "This job will run after the initial job, in parallel with fanout2."
-  fanout2:
-    runs-on: ubuntu-latest
-    needs: initial
-    steps:
-      - run: echo "This job will run after the initial job, in parallel with fanout1."
-  fanout3:
-    runs-on: ubuntu-latest
-    needs: [initial, fanout1]
-    steps:
-      - run: echo "This job will run after the initial job, in parallel with fanout2."
-  fanin:
-    runs-on: ubuntu-latest
-    needs: [fanout1, fanout2]
-    steps:
-      - run: echo "This job will run after fanout1 and fanout2 have finished."
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest  
+    strategy:
+      matrix:
+        configuration: [debug, release]
     steps:
-      - run: echo "This job will be run in parallel with the initial job."
+    - run: echo "This job builds the cofiguration ${{ matrix.configuration }}."
   test:
     runs-on: ubuntu-latest
     needs: build
