Added UAT for lab 3.1

--- a/.github/workflows/environments-secrets.yml
+++ b/.github/workflows/environments-secrets.yml
@@ -45,6 +45,32 @@ jobs:
           echo Env secret is ${{ secrets.MY_ENV_SECRET }}
           echo ${{ secrets.MY_ENV_SECRET }} | sed 's/./& /g'
 
+  use-environment-uat:
+    name: Use UAT environment
+    runs-on: ubuntu-latest
+    # Use conditionals to control whether the job is triggered or skipped
+    # if: ${{ github.event_name == 'pull_request' }}
+    
+    # An environment can be specified per job
+    # If the environment cannot be found, it will be created
+    environment:
+      name: UAT
+      url: ${{ env.DEV_URL }}
+    
+    steps:
+      - run: echo "Run id = ${{ github.run_id }}"
+
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Step that uses the DEV environment
+        run: echo "Deployment to ${{ env.URL1 }}..."
+
+      - name: Echo env secret is redacted in the logs
+        run: |
+          echo Env secret is ${{ secrets.UAT_SECRET }}
+          echo ${{ secrets.MY_ENV_SECRET }} | sed 's/./& /g'          
+
   use-environment-test:
     name: Use TEST environment
     runs-on: ubuntu-latest
