--- a/.github/workflows/environments-secrets.yml
+++ b/.github/workflows/environments-secrets.yml
@@ -20,6 +20,7 @@ env:
 
 jobs:
   use-environment-dev:
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/develop' }}
     name: Use DEV environment
     runs-on: ubuntu-latest
     # Use conditionals to control whether the job is triggered or skipped
@@ -48,6 +49,7 @@ jobs:
   use-environment-uat:
     name: Use UAT environment
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/qa' }}
     # Use conditionals to control whether the job is triggered or skipped
     # if: ${{ github.event_name == 'pull_request' }}
     
@@ -98,7 +100,7 @@ jobs:
   use-environment-prod:
     name: Use PROD environment
     runs-on: ubuntu-latest
-    #if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     
     needs: use-environment-test
 
