--- a/.github/workflows/reusable-workflow-template.yml
+++ b/.github/workflows/reusable-workflow-template.yml
@@ -1,7 +1,9 @@
 name: 04-1. Call Reusable Workflow Templates
 
 on: 
-  [workflow_dispatch]
+  workflow_dispatch:
+  push:
+     branches: [main]  
 
 jobs:
   call_greet_everyone_workflow_job:
@@ -10,7 +12,7 @@ jobs:
       name: 'Reusable Workflow Templates'
     
   call_reusable_workflow_job:
-    uses: githubabcs/gh-abcs-actions/.github/workflows/super-linter.yml@main
+    uses: mccudden/gh-abcs-actions/.github/workflows/super-linter.yml@main
 
   call_demo_workflow_job:
     needs: call_greet_everyone_workflow_job
