--- a/.github/workflows/reusable-workflow-template.yml
+++ b/.github/workflows/reusable-workflow-template.yml
@@ -6,14 +6,14 @@ on:
      branches: [main]  
 
 jobs:
-  call_greet_everyone_workflow_job:
-    uses: githubabcs/gh-abcs-actions/.github/workflows/greet-everyone.yml@main
-    with:
-      name: 'Reusable Workflow Templates'
+  # call_greet_everyone_workflow_job:
+  #   uses: githubabcs/gh-abcs-actions/.github/workflows/greet-everyone.yml@main
+  #   with:
+  #     name: 'Reusable Workflow Templates'
     
   call_reusable_workflow_job:
     uses: mccudden/gh-abcs-actions/.github/workflows/super-linter.yml@main
 
-  call_demo_workflow_job:
-    needs: call_greet_everyone_workflow_job
-    uses: githubabcs/gh-abcs-actions/.github/workflows/github-actions-demo.yml@main
+  # call_demo_workflow_job:
+  #   needs: call_greet_everyone_workflow_job
+  #   uses: githubabcs/gh-abcs-actions/.github/workflows/github-actions-demo.yml@main
