Removed some dupelicate lines from environments-secrets.yml

--- a/.github/workflows/environments-secrets.yml
+++ b/.github/workflows/environments-secrets.yml
@@ -17,6 +17,7 @@ env:
   PROD_URL: 'https://github.com'
   DOCS_URL: 'https://docs.github.com'
   DEV_URL:  'https://docs.github.com/en/developers'
+  UAT_URL:  'https://docs.github.com/en/developers'
 
 jobs:
   use-environment-dev:
@@ -57,7 +58,7 @@ jobs:
     # If the environment cannot be found, it will be created
     environment:
       name: UAT
-      url: ${{ env.DEV_URL }}
+      url: ${{ env.UAT_URL }}
     
     steps:
       - run: echo "Run id = ${{ github.run_id }}"
@@ -65,13 +66,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Step that uses the DEV environment
+      - name: Step that uses the UAT environment
         run: echo "Deployment to ${{ env.URL1 }}..."
 
       - name: Echo env secret is redacted in the logs
         run: |
           echo Env secret is ${{ secrets.UAT_SECRET }}
-          echo ${{ secrets.MY_ENV_SECRET }} | sed 's/./& /g'          
+          echo ${{ secrets.UAT_SECRET }} | sed 's/./& /g'          
 
   use-environment-test:
     name: Use TEST environment
